# flink-testing

./: .env.example  .pre-commit-config.yaml  .release-please-manifest.json  README.md  docker-compose.yml  main.py  producer.py  pyproject.toml  release-please-config.json
db-writer/: CHANGELOG.md  Dockerfile  db_writer.py
db-writer/tests/: test_db_writer.py  test_integration.py
flink/: CHANGELOG.md  Dockerfile
flink-jobs/: CHANGELOG.md  create_tables.sql  job.sql  moving_average.sql
grafana/provisioning/dashboards/: iot_metrics.json  iot_pipeline.json  providers.yml
postgres/: CHANGELOG.md  Dockerfile  debezium_connector.json  init.sql
producer/: Dockerfile
prometheus/: prometheus.yml
tests/: test_integration.py
